--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,6 +1,3 @@
-runs:
-  using: 'node20'
-  main: 'main.js'
 name: Update README
 on:
   schedule:
@@ -16,5 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: jamesgeorge007/github-activity-readme@master
+        with:
+          node-version: 20.x
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
